--- a/apps/editor/examples/example09-editor-with-color-syntax-plugin.html
+++ b/apps/editor/examples/example09-editor-with-color-syntax-plugin.html
@@ -2,19 +2,18 @@
 <html>
   <head lang="en">
     <meta charset="UTF-8" />
-    <title>10. Editor with Color Syntax Plugin</title>
+    <title>9. Editor with Color Syntax Plugin</title>
     <link rel="stylesheet" href="./css/tuidoc-example-style.css" />
-    <!-- Editor's Dependencies -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/codemirror.css"
-    />
     <!-- Editor -->
     <link rel="stylesheet" href="../dist/cdn/toastui-editor.css" />
     <!-- Editor's Plugin -->
     <link
       rel="stylesheet"
       href="https://uicdn.toast.com/tui-color-picker/v2.2.6/tui-color-picker.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://uicdn.toast.com/editor-plugin-color-syntax/3.0.0/toastui-editor-plugin-color-syntax.min.css"
     />
   </head>
   <body>
@@ -26,7 +25,7 @@
       <br />
       You can see the tutorial
       <a
-        href="https://github.com/nhn/tui.editor/blob/master/apps/editor/docs/plugins.md"
+        href="https://github.com/nhn/tui.editor/blob/master/docs/en/plugins.md"
         rel="noopener noreferrer"
         target="_blank"
         >here</a
@@ -41,7 +40,7 @@
     <!-- Editor -->
     <script src="../dist/cdn/toastui-editor-all.js"></script>
     <!-- Editor's Plugin -->
-    <script src="https://uicdn.toast.com/editor-plugin-color-syntax/1.0.1/toastui-editor-plugin-color-syntax.min.js"></script>
+    <script src="https://uicdn.toast.com/editor-plugin-color-syntax/3.0.0/toastui-editor-plugin-color-syntax.min.js"></script>
     <script type="text/babel" class="code-js">
       const { Editor } = toastui;
       const { colorSyntax } = Editor.plugin;
