--- a/apps/editor/examples/example10-editor-with-table-merged-cell-plugin.html
+++ b/apps/editor/examples/example10-editor-with-table-merged-cell-plugin.html
@@ -2,15 +2,11 @@
 <html>
   <head lang="en">
     <meta charset="UTF-8" />
-    <title>13. Editor with UML Plugin</title>
+    <title>10. Editor with Table Merged Cell Plugin</title>
     <link rel="stylesheet" href="./css/tuidoc-example-style.css" />
-    <!-- Editor's Dependencies -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/codemirror.css"
-    />
     <!-- Editor -->
     <link rel="stylesheet" href="../dist/cdn/toastui-editor.css" />
+    <link rel="stylesheet" href="https://uicdn.toast.com/editor-plugin-table-merged-cell/3.0.0/toastui-editor-plugin-table-merged-cell.min.css" />
   </head>
   <body>
     <div class="tui-doc-description">
@@ -21,8 +17,9 @@
       <br />
       You can see the tutorial
       <a
-        href="https://github.com/nhn/tui.editor/blob/master/apps/editor/docs/plugins.md"
-        rel="noopener noreferrer" target="_blank"
+        href="https://github.com/nhn/tui.editor/blob/master/docs/en/plugins.md"
+        rel="noopener noreferrer"
+        target="_blank"
         >here</a
       >.
     </div>
@@ -40,25 +37,25 @@
     <!-- Editor -->
     <script src="../dist/cdn/toastui-editor-all.js"></script>
     <!-- Editor's Plugin -->
-    <script src="https://uicdn.toast.com/editor-plugin-uml/1.0.0/toastui-editor-plugin-uml.min.js"></script>
+    <script src="https://uicdn.toast.com/editor-plugin-table-merged-cell/3.0.0/toastui-editor-plugin-table-merged-cell.min.js"></script>
     <script type="text/babel" class="code-js">
       const { Editor } = toastui;
-      const { uml } = Editor.plugin;
+      const { tableMergedCell } = Editor.plugin;
 
       const editor = new Editor({
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
-        initialValue: umlContent,
-        plugins: [uml]
+        initialValue: tableContent,
+        plugins: [tableMergedCell]
       });
 
       const viewer = Editor.factory({
         el: document.querySelector('#viewer'),
         viewer: true,
         height: '500px',
-        initialValue: umlContent,
-        plugins: [uml]
+        initialValue: tableContent,
+        plugins: [tableMergedCell]
       });
     </script>
   </body>
