--- a/apps/editor/examples/example17-placeholder.html
+++ b/apps/editor/examples/example17-placeholder.html
@@ -2,7 +2,7 @@
 <html>
   <head lang="en">
     <meta charset="UTF-8" />
-    <title>18. Using Command</title>
+    <title>17. Placeholder</title>
     <link rel="stylesheet" href="./css/tuidoc-example-style.css" />
     <!-- Editor's Dependencies -->
     <link
@@ -20,11 +20,11 @@
       >
     </div>
     <div class="code-html tui-doc-contents">
-      <button id="btn" class="btn">Execute the "Bold" command</button>
       <div id="editor"></div>
     </div>
     <!-- Added to check demo page in Internet Explorer -->
     <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
+    <script src="./data/md-default.js"></script>
     <!-- Editor -->
     <script src="../dist/cdn/toastui-editor-all.js"></script>
     <script type="text/babel" class="code-js">
@@ -32,11 +32,7 @@
         el: document.querySelector('#editor'),
         previewStyle: 'vertical',
         height: '500px',
-        initialValue: 'Select this line and click the button above.'
-      });
-
-      document.getElementById('btn').addEventListener('click', () => {
-        editor.exec('Bold');
+        placeholder: 'Please enter text.'
       });
     </script>
   </body>
